--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@react-navigation/stack": "^6.3.16",
     "deprecated-react-native-prop-types": "^4.1.0",
     "patch-package": "^7.0.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^2.9.1",
+    "react-native-gesture-handler": "^2.10.0",
+    "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
