--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -21,10 +22,12 @@
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "react-native-snap-carousel": "^4.0.0-beta.6"
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
