--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "cloudinary-react-native": "^0.0.2",
     "deprecated-react-native-prop-types": "^4.1.0",
     "patch-package": "^7.0.0",
     "prop-types": "^15.8.1",
@@ -22,6 +24,7 @@
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.5.2",
