--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-video": "^5.2.1",
+    "react-native-video-controls": "^2.8.1",
     "sync-storage": "^0.4.2"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-native-snap-carousel": "^3.8.5",
+    "@types/react-native-video": "^5.0.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
