--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
+    "rn-fetch-blob": "^0.12.0",
     "sync-storage": "^0.4.2"
   },
   "devDependencies": {
